--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${DB_HOST_MYSQL}/sistemAlelvis
+spring.datasource.url=jdbc:mysql://${DB_HOST_MYSQL}/sistemAlelvis?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USER_MYSQL}
 spring.datasource.password=${DB_PASSWORD_MYSQL}
 spring.jpa.hibernate.ddl-auto=update
